# divoom-pixoo

./: pyproject.toml
divoom_pixoo/: __main__.py  foo.py
